@@ -366,6 +366,9 @@ Release 2.8.0 - UNRELEASED
     YARN-3543. ApplicationReport should be able to tell whether the Application
     is AM managed or not. (Rohith Sharma K S via xgong)
 
+    YARN-4004. container-executor should print output of docker logs if the docker
+    container exits with non-0 exit status. (Varun Vasudev via xgong)
+
   OPTIMIZATIONS
 
     YARN-3339. TestDockerContainerExecutor should pull a single image and not
